# flext-target-ldif

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  Makefile.build  README.md  base.mk  conftest.py  custom.mk  custom.mk.rej  mkdocs.yml  output.ldif  pyproject.toml  {}
.flext-deps/: flext-ldif
.scope/: config.toml
.serena/: project.yml
config/: target_ldif.yaml
docs/: README.md  index.md
docs/api-reference/: README.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
docs/pydantic-v2-modernization/: audit_pydantic_v2.py
guides/: configuration.md  development.md  getting-started.md  skill-automation-pattern.md  testing.md  troubleshooting.md
src/flext_target_ldif/: __init__.py  __init__.pyi  __version__.py  _config.py  _exports.py  _exports_lazy_part_01.py  _settings.py  api.py  cli.py  config.py  constants.py  errors.py  exceptions.py  models.py  protocols.py  settings.py  sinks.py  target.py  transformers.py  typings.py  utilities.py  validation.py  version.py  writer.py
src/flext_target_ldif/_models/: __init__.py  config.py
src/flext_target_ldif/_utilities/: __init__.py  service_runtime.py  target.py
src/flext_target_ldif/config/: target-ldif.yaml
tests/: __init__.py  base.py  conftest.py  conftest_project.py  constants.py  models.py  protocols.py  settings.py  test_exceptions.py  test_target.py  test_writer.py  tm.py  tp.py  tt.py  tu.py  typings.py  utilities.py
tests/fixtures/: __init__.py
tests/unit/: __init__.py  test_target.py  test_writer.py
